--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				</ul>
 			</div>
 			<div class="columna-derecha brojo">
-				<h1>Felipe Salazar Delgado</h1>
+				<h1>Felipe Salazar</h1>
 				<h2>Desarrollador web y app</h2>
 				<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam delectus obcaecati est aut assumenda distinctio natus. Voluptas veniam quam explicabo repellendus cumque? Nam perferendis ea ex dolorem doloremque sint eum.
 				Mollitia placeat vero nisi rerum excepturi accusantium, non aperiam dignissimos a. Ipsam, laudantium eaque culpa molestias sunt recusandae nam deserunt atque soluta, impedit neque nisi molestiae velit saepe fugiat eveniet.
