Se agrega logos de la redes sociales

--- a/index.html
+++ b/index.html
@@ -12,10 +12,22 @@
 			<div class="columna-izquierda brojo">
 				<img src="img/felipe.jpg" alt="@felipesalazar">
 				<ul>
-					<li><div></div><a href="#">facebook</a></li>
+					<li><div></div><a href="#">Facebook</a></li>
+					<li><div></div><a href="#">Twitter</a></li>
+					<li><div></div><a href="#">Linkedin</a></li>
 				</ul>
 			</div>
-			<div class="columna-derecha brojo"></div>
+			<div class="columna-derecha brojo">
+				<h1>Felipe Salazar</h1>
+				<h2>Desarrollador web y app</h2>
+				<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam delectus obcaecati est aut assumenda distinctio natus. Voluptas veniam quam explicabo repellendus cumque? Nam perferendis ea ex dolorem doloremque sint eum.
+				Mollitia placeat vero nisi rerum excepturi accusantium, non aperiam dignissimos a. Ipsam, laudantium eaque culpa molestias sunt recusandae nam deserunt atque soluta, impedit neque nisi molestiae velit saepe fugiat eveniet.
+				Obcaecati animi minima beatae quasi veniam tenetur veritatis in facilis sapiente ipsa voluptatibus quibusdam voluptas cumque dignissimos eaque ratione reiciendis explicabo iure esse, consequatur quisquam. Dicta, modi suscipit. Ut, culpa?</p>
+			</div>
+
+			<div id="proyectos">
+				<h3>Proyectos recientes</h3>
+			</div>
 		</div>
 	</div>
 </body>
