--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>About me</title>
 	<link rel="stylesheet" href="css/main.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script type="text/javascript" src="/fancybox/jquery.fancybox-1.3.4.pack.js"></script>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.css"/>
+	<script type="text/javascript" src="/fancybox/jquery.easing-1.4.pack.js"></script>
+	<script type="text/javascript" src="/fancybox/jquery.mousewheel-3.0.4.pack.js"></script>
+	<script type = "text/javascript" src="js/main.js"></script>
 </head>
 <body>
+	<script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.umd.js"></script>
 	<div id="contenedor">
-		<div id="contenido">
-			<div class="columna-izquierda brojo">
+		<div class="contenido clearfix">
+			<div class="columna-izquierda">
 				<img src="img/felipe.jpg" alt="@felipesalazar">
 				<ul>
 					<li><div></div><a href="#">Facebook</a></li>
@@ -17,16 +24,26 @@
 					<li><div></div><a href="#">Linkedin</a></li>
 				</ul>
 			</div>
-			<div class="columna-derecha brojo">
+			<div class="columna-derecha">
 				<h1>Felipe Salazar</h1>
 				<h2>Desarrollador web y app</h2>
-				<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam delectus obcaecati est aut assumenda distinctio natus. Voluptas veniam quam explicabo repellendus cumque? Nam perferendis ea ex dolorem doloremque sint eum.
-				Mollitia placeat vero nisi rerum excepturi accusantium, non aperiam dignissimos a. Ipsam, laudantium eaque culpa molestias sunt recusandae nam deserunt atque soluta, impedit neque nisi molestiae velit saepe fugiat eveniet.
-				Obcaecati animi minima beatae quasi veniam tenetur veritatis in facilis sapiente ipsa voluptatibus quibusdam voluptas cumque dignissimos eaque ratione reiciendis explicabo iure esse, consequatur quisquam. Dicta, modi suscipit. Ut, culpa?</p>
+				<p>Ingeniero de sistemas de información, con experiencia en temas de mantenimiento 
+				   correctivo y preventivo de computadores, desarrollo de software según los requerimientos 
+				   de la compañía, creación y uso de bases de datos. Con competencias tales como pensamiento 
+				   analítico, creatividad, innovación y orientación al cliente. Habilidades en el uso de 
+				   herramientas .NET(c-sharp), Javascript, manejo de base de datos sqlserver, oracle.</p>
 			</div>
 
-			<div id="proyectos">
+			<div id="proyectos" class="clearfix">
 				<h3>Proyectos recientes</h3>
+				<ul>
+					<li><a class="fancybox"  href="img/proyecto.jpg"><img src="https://via.placeholder.com/150C/O https://placeholder.com/" alt=""></a></li>
+					<li><a class="fancybox" href="img/proyecto.jpg"><img src="https://via.placeholder.com/150C/O https://placeholder.com/" alt=""></a></li>
+					<li><a class="fancybox" href="img/proyecto.jpg"><img src="https://via.placeholder.com/150C/O https://placeholder.com/" alt=""></a></li>
+					<li><a class="fancybox" href="img/proyecto.jpg"><img src="https://via.placeholder.com/150C/O https://placeholder.com/" alt=""></a></li>
+					<li><a class="fancybox" href="img/proyecto.jpg"><img src="https://via.placeholder.com/150C/O https://placeholder.com/" alt=""></a></li>
+					
+				</ul>
 			</div>
 		</div>
 	</div>
